--- a/.github/stacks/stack.yml
+++ b/.github/stacks/stack.yml
@@ -1,7 +1,7 @@
 version: 0.1.0                                            
 
-name: Test stack to Deploy Next.js site to GitHub pages  # stack name 
-description: Description of the test stack               # stack description
+name: 'Test stack to Deploy Next.js site to GitHub pages'  # stack name 
+description: 'Description of the test stack'               # stack description
 
 branding:                                                # stack branding 
  icon: 'zap'
