--- a/.github/workflows/stack-init.yml
+++ b/.github/workflows/stack-init.yml
@@ -29,7 +29,7 @@ jobs:
       - name: 3 - substitute user inputs in the workflow files
         uses: microsoft/variable-substitution@v1 
         with:
-          files: '.github/workflows/build.yaml, .github/workflows/deploy.yaml'
+          files: '.github/workflows/build.yml, .github/workflows/deploy.yml'
         env:
           env.NODE_VERSION: '${{ github.event.inputs.NODE_VERSION }}'
 
