--- a/.github/stacks/stack.yml
+++ b/.github/stacks/stack.yml
@@ -1,7 +1,7 @@
 version: 0.1.0                                            
 
-name: Test stack to Deploy Next.js site to GitHub pages  # stack name 
-description: Description of the test stack               # stack description
+name: Deploy a Next.js site to GitHub pages  
+description: A stack to deploy a nextjs based website to Github Pages               
 
 branding:                                                # stack branding 
  icon: 'package'
@@ -14,36 +14,22 @@ inputs:                                                  # stack inputs
     validvalues:                                         # stack input valid values that can be selected
     - v12.22.4
     - v14.17.4
-    
-  - name: GITHUB_PAT
-    description: Enter a GitHub PAT with repository access and read/write permissions for workflows
-    required: true
-    is-secret: true
 
 configs:
   repo-metadata:
     parameters:
       description: 'NextJS app on GH pages'
-      secrets: 
-      - name: GH_PAT
-        value: ${{inputs.GITHUB_PAT}}
       topics:
       - nextjs
       - github-pages
 
-  branches:
-    - name: main
-      parameters:
-        enforce-admins: true
-        required-pull-request-reviews:
-          dismiss-stale-reviews: true
-          required-approving-review-count: 1
-          require-code-owner-reviews: true
-
   environments:
     - name: development
       parameters:
-        protected-branches: true
+        protected-branches: false
+        allowed-branch-rules:
+          - main
+          - releases/*
 
 init:
-  uses: "stack-init.yml"
+  uses: "stack-init.yaml"
