--- a/.github/stacks/stack.yml
+++ b/.github/stacks/stack.yml
@@ -9,8 +9,8 @@ branding:                                                # stack branding
 
 inputs:                                                  # stack inputs 
   - name: NODE_VERSION                                   # stack input name
-    default: v12.22.4                                    # stack input default value provided
-    description: NODE_VERSION for nodejs stack           # stack input description
+    default: v12.22.4                                    # stack input default value
+    description: Node version for the Node.js stack      # stack input description
     validvalues:                                         # stack input valid values that can be selected
     - v12.22.4
     - v14.17.4
@@ -32,4 +32,4 @@ configs:
           - releases/*
 
 init:
-  uses: "stack-init.yaml"
+  uses: "stack-init.yml"
