--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,9 +4,6 @@ on:
   workflow_dispatch:
   workflow_call:
 
-env:
-  NODE_VERSION: '___NODE_VERSION___'
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -20,10 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: use node.js ${{ env.NODE_VERSION }}
+      - name: use node.js 
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version-file: '.nvmrc'
           registry-url: https://registry.npmjs.org/
 
       - name: build
@@ -31,7 +28,6 @@ jobs:
           npm install -g
           npm run build
           npm run env -- next export -o build
-
       - name: deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
@@ -44,7 +40,7 @@ jobs:
         uses: actions/github-script@v4
         continue-on-error: true # API fails when the GitHub pages is already deployed
         with:
-          github-token: ${{ secrets.GH_PAT }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             github.repos.createPagesSite({
               owner: context.repo.owner,
@@ -54,13 +50,11 @@ jobs:
                 path: '/'
               }
             })
-
       - name: Website URL
         run: |
           echo "Website URL: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
-
       - name: Wait for website to come online
-        timeout-minutes: 5
+        timeout-minutes: 10
         id: get-url
         run: |
           echo "Waiting for the website to come alive..."
